# IG-Bot

./: .env.example  .gitignore  AUTOMATION.md  CLAUDE.md  HOWTO-POST.md  README.md  SETUP.md  config.example.toml  config.toml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: block-secrets.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  harvest.yml  post.yml
src/igbot/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/igbot/automation/: __init__.py  runner.py
src/igbot/db/: schema.sql  store.py
src/igbot/media/: __init__.py  downloader.py  host.py  overlay.py
src/igbot/publish/: __init__.py  instagram.py  runner.py
src/igbot/sources/: __init__.py  base.py  reddit.py  tiktok.py  x.py
src/igbot/web/: app.py
tests/: test_automation.py  test_config.py  test_downloader.py  test_instagram.py  test_overlay.py  test_pipeline.py  test_publish_runner.py  test_reddit.py  test_store.py  test_tiktok.py  test_web.py  test_x.py
